# Velib-forecast

./: .dockerignore  .gitignore  Dockerfile  README.md  convert_json_to_jsonl.sh  docker-compose.yml  fetch_altitude.py  fetch_data.py  init_gbq.sh  pyproject.toml  velib_station_status_2024-10-30_18-12-13.json
.data_fetch/: velib_station_status_2024-11-05_16-48-41.jsonl  velib_station_status_2024-11-05_16-49-42.jsonl  velib_station_status_2024-11-05_16-50-42.jsonl  velib_station_status_2024-11-05_16-51-42.jsonl  velib_station_status_2024-11-05_16-52-57.jsonl  velib_station_status_2024-11-05_16-53-57.jsonl  velib_station_status_2024-11-05_16-54-57.jsonl  velib_station_status_2024-11-05_16-55-57.jsonl
app/: fetch_data.py  fetch_station_info.py  trigger_airbyte.py  upload_to_bucket.py  upload_to_bucket_station.py  xform_lastReported.py
dags/: dags_velib.py  dags_velib_new.py  trigger_airbyte.py
data/: station_info_2024-11-03_09-51-54.json
dbt_velib/: .user.yml  dbt_project.yml  profiles.yml
dbt_velib/models/marts/velib/: station_status_10min.sql  station_status__hourly_avg.sql
dbt_velib/models/staging/velib/: _velib__sources.yml  stg_airbyte__velib_status.sql  stg_velib__stations.sql
my_project_env/: pyvenv.cfg
scripts/: entrypoint.sh
sql/: import_station_info.sql  iniit_velib_db.sql  init_velib_gbq.sql
