[tool.poetry]
name = "velib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.20"
numpy = "1.21.0"
pandas = "^1.4.2"
dbt-core = "^1.8.8"
dbt-bigquery = "^1.8.3"
apache-airflow = {version = "2.10.2", extras = ["google"]}
psycopg2-binary = "^2.9.10"
wtforms = "3.1.2"
requests = "^2.32.3"
google-cloud = "^0.34.0"
google = "^3.0.0"
google-cloud-storage = "^2.18.2"
setuptools = ">=66.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
