[tool.poetry]
name = "velib"
version = "0.1.0"
description = ""
authors = ["S. Saunier <seb@lewagon.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "2.3.0"
apache-airflow-providers-postgres = "4.1.0"
googletrans = "4.0.0rc1"
pendulum = "^2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"
pytest-mock = "3.2.0"
apache-airflow-backport-providers-sqlite = "2021.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
markers = ["optional: not required, nor saved in test_output.txt"]
